fixed background alignment

--- a/webscrapper/frontend/webscrapper_app/app/assets/stylesheets/custom.css.scss
+++ b/webscrapper/frontend/webscrapper_app/app/assets/stylesheets/custom.css.scss
@@ -10,8 +10,7 @@ body {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
-  min-width: 1280px;
-  min-height: 720px;
+  min-height: 1024px;
   height: 100%;
 }
 
